@@ -6,13 +6,15 @@ import frauas.teilr.entity.User;
 import frauas.teilr.repository.GroupMemberRepository;
 import frauas.teilr.repository.GroupRepository;
 import frauas.teilr.repository.UserRepository;
+import frauas.teilr.repository.BillRepository;
+import frauas.teilr.repository.ExpenseSplitRepository;
+import org.springframework.transaction.annotation.Transactional;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,22 +22,28 @@ public class GroupService {
     private final GroupRepository groupRepository;
     private final GroupMemberRepository groupMemberRepository;
     private final UserRepository userRepository;
+    private final BillRepository billRepository;
+    private final ExpenseSplitRepository expenseSplitRepository;
 
     /**
      * Create a new group. The creator becomes admin and is added as the first
      * member.
      */
     public Group createGroup(String name, Long adminId, List<Long> memIds) {
+        if (name == null || name.trim().isEmpty()) {
+            throw new IllegalArgumentException("Group name cannot be empty.");
+        }
+
         Group group = new Group();
-        group.setName(name);
+        group.setName(name.trim());
         group.setAdminId(adminId);
         Group saved = groupRepository.save(group);
 
-        addMember(saved.getId(), adminId);
+        addMember(saved.getId(), adminId, adminId);
 
         for (Long memberId : memIds) {
             if (!memberId.equals(adminId)) {
-                addMember(saved.getId(), memberId);
+                addMember(saved.getId(), memberId, adminId);
             }
         }
         return saved;
@@ -45,7 +53,17 @@ public class GroupService {
         return groupRepository.findById(groupId);
     }
 
-    public void addMember(Long groupId, Long userId) {
+    public void addMember(Long groupId, Long userId, Long requesterId) {
+        Group group = groupRepository.findById(groupId)
+                .orElseThrow(() -> new IllegalArgumentException("Group not found: " + groupId));
+
+        if (!group.getAdminId().equals(requesterId)) {
+            throw new SecurityException("Only the group admin can add members.");
+        }
+        if (!userRepository.existsById(userId)) {
+            throw new IllegalArgumentException("User with ID " + userId + " does not exist.");
+        }
+
         if (!groupMemberRepository.existsByGroupIdAndUserId(groupId, userId)) {
             GroupMember member = new GroupMember();
             member.setGroupId(groupId);
@@ -59,21 +77,17 @@ public class GroupService {
     }
 
     public List<Group> getGroupsForUser (Long userId) {
-        return groupMemberRepository.findByUserId(userId)
-                .stream()
-                .map(gm -> groupRepository.findById(gm.getGroupId()))
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .collect(Collectors.toList());
+        List<Long> groupIds = groupMemberRepository.findByUserId(userId).stream()
+                .map(GroupMember::getGroupId)
+                .toList();
+        return groupRepository.findAllById(groupIds);
     }
 
     public List<User> getMembersOfGroup(Long groupId) {
-        return groupMemberRepository.findByGroupId(groupId)
-            .stream()
-                .map(gm -> userRepository.findById(gm.getUserId()))
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .collect(Collectors.toList());
+        List<Long> userIds = groupMemberRepository.findByGroupId(groupId).stream()
+                .map(GroupMember::getUserId)
+                .toList();
+        return userRepository.findAllById(userIds);
     }
 
     /**
@@ -82,6 +96,7 @@ public class GroupService {
      * @throws IllegalArgumentException if the group does not exist
      * @throws SecurityException        if the requester is not the admin
      */
+    @Transactional
     public void deleteGroup(Long groupId, Long requestedId) {
         Group group = groupRepository.findById(groupId)
                 .orElseThrow(() -> new IllegalArgumentException("Group not found: " + groupId));
@@ -89,6 +104,12 @@ public class GroupService {
         if (!group.getAdminId().equals(requestedId)) {
             throw new SecurityException("Only the group admin can delete this group.");
         }
+        
+        // Clean up orphaned data related to this group
+        expenseSplitRepository.deleteByGroupId(groupId);
+        billRepository.deleteByGroupId(groupId);
+        groupMemberRepository.deleteByGroupId(groupId);
+        
         groupRepository.delete(group);
     }
 }
